UPDATE main.scss, prevent labels from overflowing in the REST documentation

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -1191,6 +1191,9 @@ hr.blue {
 
 .label {
   font-weight: 300;
+  display: inline;
+  white-space: initial;
+  text-align: left;
 }
 
 /* CODE STYLES ------------------------------------------------------------ */
